--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </header>
     <main class="w-11/12 md:w-11/12 lg:w-5/6 mx-auto">
       <!-- section legal practice area -->
-      <div>
+      <div class="mb-32">
         <!-- !content -->
         <div class="text-center">
           <h1 class="text-5xl text-dark01 font-bold header mb-6">
@@ -215,9 +215,9 @@
           <div
             class="md:px-16 px-8 py-10 lg:border-r border-gray-200 lg:border-b lg:bg-gradient-to-t from-[#f3f3f300] to-[#f3f3f3]"
           >
-            <img src="images/business.png" alt="" class="mx-auto mb-8" />
+            <img src="images/criminal.png" alt="" class="mx-auto mb-8" />
             <h2 class="text-3xl text-dark01 header font-bold mb-6">
-              Business Law
+              Criminal Law
             </h2>
             <p class="paragraph text-dark02 leading-7 mb-8">
               There are many variations of passages of Lorem Ipsum available,
@@ -228,9 +228,9 @@
           </div>
           <!-- card 3-->
           <div class="md:px-16 px-8 py-10 border-gray-200 lg:border-b">
-            <img src="images/business.png" alt="" class="mx-auto mb-8" />
+            <img src="images/child.png" alt="" class="mx-auto mb-8" />
             <h2 class="text-3xl text-dark01 header font-bold mb-6">
-              Business Law
+              Child Support
             </h2>
             <p class="paragraph text-dark02 leading-7 mb-8">
               There are many variations of passages of Lorem Ipsum available,
@@ -241,9 +241,9 @@
           </div>
           <!-- card 4-->
           <div class="md:px-16 px-8 py-10 lg:border-r border-gray-200">
-            <img src="images/business.png" alt="" class="mx-auto mb-8" />
+            <img src="images/education.png" alt="" class="mx-auto mb-8" />
             <h2 class="text-3xl text-dark01 header font-bold mb-6">
-              Business Law
+              Education Law
             </h2>
             <p class="paragraph text-dark02 leading-7 mb-8">
               There are many variations of passages of Lorem Ipsum available,
@@ -254,9 +254,9 @@
           </div>
           <!-- card 5-->
           <div class="md:px-16 px-8 py-10 lg:border-r border-gray-200">
-            <img src="images/business.png" alt="" class="mx-auto mb-8" />
+            <img src="images/divorce.png" alt="" class="mx-auto mb-8" />
             <h2 class="text-3xl text-dark01 header font-bold mb-6">
-              Business Law
+              Divorce Law
             </h2>
             <p class="paragraph text-dark02 leading-7 mb-8">
               There are many variations of passages of Lorem Ipsum available,
@@ -267,10 +267,8 @@
           </div>
           <!-- card 6-->
           <div class="md:px-16 px-8 py-10">
-            <img src="images/business.png" alt="" class="mx-auto mb-8" />
-            <h2 class="text-3xl text-dark01 header font-bold mb-6">
-              Business Law
-            </h2>
+            <img src="images/tax.png" alt="" class="mx-auto mb-8" />
+            <h2 class="text-3xl text-dark01 header font-bold mb-6">Tax Law</h2>
             <p class="paragraph text-dark02 leading-7 mb-8">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration in some form, by
@@ -280,7 +278,339 @@
           </div>
         </div>
       </div>
+      <!-- section client review -->
+      <section class="mb-32">
+        <!-- !content -->
+        <div class="text-center">
+          <h1 class="text-5xl text-dark01 font-bold header mb-6">
+            What Our Client Say
+          </h1>
+          <p class="paragraph text-dark02 mb-16">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have <br />
+            suffered alteration in some form, by injected humour.
+          </p>
+        </div>
+        <!-- container -->
+        <div class="carousel w-full">
+          <!-- div slide 1 -->
+          <div
+            id="slide1"
+            class="carousel-item relative w-full bg-[url('./images/slider-1.jpg')] bg-no-repeat bg-cover bg-center"
+          >
+            <div
+              class="text-center py-24 text-white bg-[url('./images/Rectangle-7.png')] bg-no-repeat bg-cover bg-center"
+            >
+              <div>
+                <img
+                  src="images/client.jpeg"
+                  alt=""
+                  class="m-auto rounded-full mb-6 p-2 w-[100px]"
+                />
+              </div>
+              <h1 class="header text-xl font-bold mb-1">Md Eyasin Bhuiya</h1>
+              <p class="paragraph text mb-8">Web Developer</p>
+              <p class="paragraph w-5/6 m-auto px-5">
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old. Richard McClintock, a
+                Latin professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur.
+              </p>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide3" class="btn btn-circle">❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- div slide 2 -->
+          <div
+            id="slide2"
+            class="carousel-item relative w-full bg-[url('./images/slider-2.jpg')] bg-no-repeat bg-cover bg-center"
+          >
+            <div
+              class="text-center py-24 text-white bg-[url('./images/Rectangle-7.png')] bg-no-repeat bg-cover bg-center"
+            >
+              <div>
+                <img
+                  src="images/client.jpeg"
+                  alt=""
+                  class="m-auto rounded-full mb-6 p-2 w-[100px]"
+                />
+              </div>
+              <h1 class="header text-xl font-bold mb-1">Md Eyasin Bhuiya</h1>
+              <p class="paragraph text mb-8">Web Developer</p>
+              <p class="paragraph w-5/6 m-auto px-5">
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old. Richard McClintock, a
+                Latin professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur.
+              </p>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide1" class="btn btn-circle">❮</a>
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- div slide 3 -->
+          <div
+            id="slide3"
+            class="carousel-item relative w-full bg-[url('./images/slider-3.jpg')] bg-no-repeat bg-cover bg-center"
+          >
+            <div
+              class="text-center py-24 text-white bg-[url('./images/Rectangle-7.png')] bg-no-repeat bg-cover bg-center"
+            >
+              <div>
+                <img
+                  src="images/client.jpeg"
+                  alt=""
+                  class="m-auto rounded-full mb-6 p-2 w-[100px]"
+                />
+              </div>
+              <h1 class="header text-xl font-bold mb-1">Md Eyasin Bhuiya</h1>
+              <p class="paragraph text mb-8">Web Developer</p>
+              <p class="paragraph w-5/6 m-auto px-5">
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old. Richard McClintock, a
+                Latin professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur.
+              </p>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide2" class="btn btn-circle">❮</a>
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section fqu asked question -->
+      <section class="mb-32">
+        <!-- !content -->
+        <div class="text-center">
+          <h1 class="text-5xl text-dark01 font-bold header mb-6">
+            Frequently Asked Any Questions
+          </h1>
+          <p class="paragraph text-dark02 mb-16">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have <br />
+            suffered alteration in some form, by injected humour.
+          </p>
+        </div>
+        <!-- container -->
+        <div
+          class="flex items-center justify-center gap-8 flex-col-reverse md:flex-row"
+        >
+          <!-- div for content -->
+          <div class="flex-1 space-y-8">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                1.Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, .
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                2. Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                  repellendus nostrum aliquid et ex nam.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                3. Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Fugit, doloremque facilis quia in perspiciatis labore. Nisi
+                  vitae ea porro facere.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                4. Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Adipisci, id.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- div for picture -->
+          <div class="flex-1">
+            <img src="images/faq.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- section contact -->
+      <section class="mb-32">
+        <!-- !content -->
+        <div class="text-center">
+          <h1 class="text-5xl text-dark01 font-bold header mb-6">
+            Contact With Us
+          </h1>
+          <p class="paragraph text-dark02 mb-16">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have <br />
+            suffered alteration in some form, by injected humour.
+          </p>
+        </div>
+        <!-- container -->
+        <div class="grid xl:grid-cols-2 grid-cols-1 gap-9 content-center">
+          <!-- div contact -->
+          <div class="grid md:grid-cols-2 grid-cols-1 bg-[#F3F3F3]">
+            <!-- card 1 -->
+            <div
+              class="text-center p-16 lg:border-r lg:border-b border-gray-300"
+            >
+              <img src="images/location.png" alt="" class="m-auto mb-4" />
+              <h3 class="header text-dark01 font-extrabold text-2xl mb-4">
+                Address
+              </h3>
+              <p class="paragraph text-dark02 leading-8">
+                A108 Adam Street,<br />
+                New York, NY 535022
+              </p>
+            </div>
+            <!-- card 2 -->
+            <div class="text-center p-16 lg:border-b border-gray-300">
+              <img src="images/call.png" alt="" class="m-auto mb-4" />
+              <h3 class="header text-dark01 font-extrabold text-2xl mb-4">
+                Call Us
+              </h3>
+              <p class="paragraph text-dark02 leading-8">
+                +880124656449,<br />
+                +8801154345446
+              </p>
+            </div>
+            <!-- card 3 -->
+            <div class="text-center p-16 lg:border-r border-gray-300">
+              <img src="images/email.png" alt="" class="m-auto mb-4" />
+              <h3 class="header text-dark01 font-extrabold text-2xl mb-4">
+                Email Us
+              </h3>
+              <p class="paragraph text-dark02 leading-8">
+                info@gmail.com,<br />
+                info@yahoo.com
+              </p>
+            </div>
+            <!-- card 4-->
+            <div class="text-center p-16">
+              <img src="images/time.png" alt="" class="m-auto mb-4" />
+              <h3 class="header text-dark01 font-extrabold text-2xl mb-4">
+                Working Hours
+              </h3>
+              <p class="paragraph text-dark02 leading-8">
+                A108 Adam Street,<br />
+                New York, NY 535022
+              </p>
+            </div>
+          </div>
+          <!-- div massage -->
+          <div>
+            <form action="" class="flex flex-col gap-8">
+              <input
+                type="text"
+                class="bg-[#F3F3F3] py-6 pl-6 rounded-xl"
+                placeholder="Your Name"
+              />
+              <input
+                type="text"
+                class="bg-[#F3F3F3] py-6 pl-6 rounded-xl"
+                placeholder="Your Email"
+              />
+              <input
+                type="text"
+                class="bg-[#F3F3F3] py-6 pl-6 rounded-xl"
+                placeholder="Subject"
+              />
+              <textarea
+                name=""
+                class="bg-[#F3F3F3] pt-6 pb-20 pl-6 rounded-xl"
+                id=""
+                placeholder="Your Message"
+              ></textarea>
+              <button
+                class="bg-primary-color text-white text-lg font-semibold py-6 rounded-xl"
+              >
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer
+      class="footer bg-black text-white p-10 md:flex justify-around grid grid-cols-1 sm:grid-cols-2"
+    >
+      <div>
+        <img src="images/logo.png" alt="" />
+        <p>
+          There are many variations of <br />
+          passages of Lorem Ipsum <br />
+          available, but the majority have <br />
+          suffered alteration in some <br />
+          form, by injected humour.
+        </p>
+      </div>
+      <nav>
+        <h6 class="footer-title">Useful Link</h6>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Contact Now</h6>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+      <form>
+        <h6 class="footer-title">Subscribe</h6>
+        <p>
+          Subscribe for our latest & <br />
+          Articles. We Won’t Give You <br />
+          Spam Mails
+        </p>
+        <div class="relative">
+          <input
+            type="text"
+            placeholder="Email Address"
+            class="py-3 pl-2 rounded-lg"
+          />
+          <button
+            class="bg-primary-color py-[13px] px-3 rounded-lg absolute right-0"
+          >
+            Send
+          </button>
+        </div>
+      </form>
+    </footer>
   </body>
 </html>
